2005-04-28  John W. Eaton  <jwe@octave.org>

	* configure.in (AC_CONFIG_SRCDIR): Look for startup/inputrc, not
	startup/octaverc.

2005-04-28  Stefan van der Walt  <stefan@sun.ac.za>

	* image/imshow.m: Handle various image depths and 3d RGB images.
	(__im_numeric_limits__): New internal function.

2005-04-28  toni saarela  <toni.saarela@helsinki.fi>

	* statistics/tests/anova.m: Compute total_mean as mean of all
	data, not mean of group_mean.

2005-04-28  John W. Eaton  <jwe@octave.org>

	* startup/local-rcfile: New file.
	* startup/main-rcfile: Rename from startup/octaverc.
	* startup/Makefile.in (SOURCES): Add inputrc to the list.
	(install install-strip): Install main-rcfile in $(fcnfiledir)/startup.
	Install local-rcfile in $(localfcnfiledir)/startup.

2005-04-28  Keith Goodman  <kwgoodman@gmail.com>

	* startup/inputrc: New file.
	* startup/octaverc: Configure readline using inputrc from
	startupfiledir.
	* startup/Makefile.in (install, install-strip): Install octaverc
	in $(fcnfiledir)/startup.

2005-04-27  John W. Eaton  <jwe@octave.org>

	* optimization/qp.m: Define n_in after removing -Inf bounds from Ain.

2005-04-21  John W. Eaton  <jwe@octave.org>

	* optimization/glpk.m: Handle SENSE argument.

	* optimization/qp.m, optimization/sqp.m: New files.

2005-04-08  John W. Eaton  <jwe@octave.org>

	* Makefile.in (clean, distclean, maintainer-clean):
	Avoid duplication in rules.

2005-03-28  John W. Eaton  <jwe@octave.org>

	* plot/contour.m, plot/mesh.m: Continue to use __gnuplot_raw__ for
	setting {no,}parametric.
	* plot/figure.m: Likewise, for setting terminal type.

	*  __axis_label__.m:, plot/axis.m, plot/bottom_title.m,
	plot/contour.m, plot/figure.m, plot/multiplot.m, plot/mplot.m,
	plot/plot_border.m, plot/subplot.m, plot/subwindow.m,
	plot/title.m, plot/top_title.m: Avoid eval.

2005-03-28  Dmitri A. Sergatskov  <dasergatskov@gmail.com>

	* plot/__axis_label__.m, plot/axis.m, plot/grid.m,