@@ -278,7 +278,7 @@ As in form [2], but allows ordering of generalized eigenpairs\n\
 Note: qz performs permutation balancing, but not scaling (see balance).\n\
       Order of output arguments was selected for compatibility with MATLAB\n\
 \n\
-See also: balance, dare, eig, schur\n\
+@seealso{balance, dare, eig, schur}\n\
 @end deftypefn")
 {
   octave_value_list retval;
